[gd_scene load_steps=3 format=3 uid="uid://3xgca2tlsvhb"]

[ext_resource type="Script" path="res://Views/Controls/Carography.gd" id="1_lskbw"]
[ext_resource type="PackedScene" uid="uid://c8tj2x2m3utep" path="res://Components/ImageInspector.tscn" id="2_7lc4p"]

[node name="Cartography" type="TabBar"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lskbw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 55.0
grow_horizontal = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="ImageInspector" parent="MarginContainer/HBoxContainer" instance=ExtResource("2_7lc4p")]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="SourceZoneEdit" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Source Zone Name"

[node name="TargetZoneEdit" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Target Zone Name"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Time remaining:"

[node name="HoursEdit" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
placeholder_text = "hh"

[node name="MinutesEdit" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
placeholder_text = "mm"

[node name="SecondsEdit" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
placeholder_text = "ss"

[node name="RegisterButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Register"
